--- a/deploy_tools/nginx.template.conf
+++ b/deploy_tools/nginx.template.conf
@@ -2,7 +2,7 @@ server {
 	listen 80;
 	server_name SITENAME;
 
-	location /static }
+	location /static {
 		alias /home/stack/sites/SITENAME/static;
 	}
 
